syntax = "proto3";

package game;
option go_package = "golang.project/go-fundamentals/gameapp/contract/goprotobuf/game";

message GameQuiz {
  uint64 game_id = 1;
  repeated uint64 player_ids = 2;
  repeated Question questions = 3;
}

message Question {
  uint64 id = 1;
  string text = 2;
  repeated PossibleAnswer possible_answers = 3;
  uint32 correct_answer = 4;
  uint32 difficulty = 5;
  string category = 6;
}

message PossibleAnswer {
  uint64 id = 1;
  string text = 2;
  uint32 possible_answer_choice = 3;
}